@@ -25,6 +25,8 @@
     * h5s
     * h6s
     * paragraphs
+    * labels
+    * file_fields
   * Added ability to register and use custom elements based on standard elements (William Powell)
   * Added generated method to return text for a table
   * Added generated method to return text for an unordered list
